--- a/home.html
+++ b/home.html
@@ -234,7 +234,7 @@
                 <div class="timeline-item mb-4">
                     <div class="card shadow-sm">
                         <div class="card-body">
-                            <h5 class="card-title">Bachelor of Science in Computer Science &amp; Engineering</h5>
+                            <h5 class="card-title">Bachelor of Engineering in Computer Science &amp; Engineering</h5>
                             <h6 class="card-subtitle mb-2 text-muted">
                                 New Horizon College of Engineering
                             </h6>
