--- a/home.html
+++ b/home.html
@@ -640,7 +640,7 @@
                         <div class="card-body">
                             <h5 class="card-title">BMyVision: A Virtual Eye for the Visually Impaired</h5>
                             <p class="fw-light mb-2">January 2023 - May 2023</p>
-                            <p class="mb-2"><u>New Horizon College of Engineering, India</u></p>
+                            <p class="mb-2"><u>New Horizon College of Engineering, Bangalore, India</u></p>
                             <p>App that detects objects with the help of Python concepts with database. Describes the features of the object with the help of algorithm YOLO and NLP.</p>
                             <p><strong>Technologies:</strong> Python (Programming Language), Natural Language Processing (NLP), yolo, Database Management System (DBMS).</p>
                         </div>
@@ -679,7 +679,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Location Aware Holiday Planner</h5>
                             <p class="fw-light mb-2">August 2022 - December 2022</p>
-                            <p class="mb-2"><u>New Horizon College of Engineering, India</u></p>
+                            <p class="mb-2"><u>New Horizon College of Engineering, Bangalore, India</u></p>
                             <p>Android Studio project to book a place for location using Java tools and database. User can book based on review of the place with the opening and closing time.</p>
                             <p><strong>Technologies:</strong> Databases, Andriod studio, Java, Database Management System (DBMS).</p>
                         </div>
@@ -718,7 +718,7 @@
                         <div class="card-body">
                             <h5 class="card-title">NewzU</h5>
                             <p class="fw-light mb-2">January 2022 - May 2022</p>
-                            <p class="mb-2"><u>New Horizon College of Engineering, India</u></p>
+                            <p class="mb-2"><u>New Horizon College of Engineering, Bangalore, India</u></p>
                             <p>Website with the help of HTML, Javascript, CSS and PHP also a backhand database. User can read articles or watch videos based on regions and languages.</p>
                             <p><strong>Technologies:</strong> Databases, Cascading Style Sheets (CSS), PHP, MySQL, HTML.</p>
                         </div>
@@ -757,7 +757,7 @@
                         <div class="card-body">
                             <h5 class="card-title">My Own Text Editor</h5>
                             <p class="fw-light mb-2">August 2021 - December 2021</p>
-                            <p class="mb-2"><u>New Horizon College of Engineering, India</u></p>
+                            <p class="mb-2"><u>New Horizon College of Engineering, Bangalore, India</u></p>
                             <p>Simple text Editor using Python tools such as, Tkinter, tuple and list, with the help of Database concepts as the backhand where the user can create files (or open) and save them after editing (like changing font style, colour and background colour).</p>
                             <p><strong>Technologies:</strong> Python (Programming Language), Databases, Tkinter, MySQL.</p>
                         </div>
@@ -796,7 +796,7 @@
                         <div class="card-body">
                             <h5 class="card-title">ATM Simulation</h5>
                             <p class="fw-light mb-2">January 2021 - May 2021</p>
-                            <p class="mb-2"><u>New Horizon College of Engineering, India</u></p>
+                            <p class="mb-2"><u>New Horizon College of Engineering, Bangalore, India</u></p>
                             <p>Designed with Java (classes, functions and inheritance), an ATM machine to withdraw, deposit, transfer and check balance.</p>
                             <p><strong>Technologies:</strong> Inheritance, Java.</p>
                         </div>
@@ -835,7 +835,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Social Networking</h5>
                             <p class="fw-light mb-2">August 2020 - December 2020</p>
-                            <p class="mb-2"><u>New Horizon College of Engineering, India</u></p>
+                            <p class="mb-2"><u>New Horizon College of Engineering, Bangalore, India</u></p>
                             <p>Using C concepts like Arrays, Trees and Graph, created social platform where user can create their own account, update their profile, make posts and make friends.</p>
                             <p><strong>Technologies:</strong> Trees, C (Programming Language), arrays, Graphs.</p>
                         </div>
@@ -882,7 +882,7 @@
                     <div class="card shadow-sm">
                         <div class="card-body">
                             <h5 class="card-title">Software Engineer Intern</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">Rovae Incorporation, Bengaluru, India</h6>
+                            <h6 class="card-subtitle mb-2 text-muted">Rovae Incorporation, Bangalore, India</h6>
                             <p class="card-text">
                                 <small>Jan 2023 – April 2023</small>
                             </p>
