--- a/home.html
+++ b/home.html
@@ -921,6 +921,19 @@
         <div class="container">
         <h2 class="section-title">Certifications</h2>
         <div class="row">
+            <!-- Certification Card 17: Udemy -->
+            <div class="col-md-4 mb-4">
+            <div class="card h-100 shadow-sm certification-card">
+                <div class="card-body">
+                <h5 class="card-title">Cyber security: From Beginning to End</h5>
+                <p class="card-text">Udemy</p>
+                <p class="card-text fw-light">April 2025</p>
+                </div>
+                <div class="card-footer text-center">
+                <a href="#" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#certModal17">View Certificate</a>
+                </div>
+            </div>
+            </div>
             <!-- Certification Card 1: Udemy -->
             <div class="col-md-4 mb-4">
             <div class="card h-100 shadow-sm certification-card">
@@ -1134,6 +1147,21 @@
     </section>
     
     <!-- Modal Dialogues for Certifications -->
+    <!-- Modal 17: Udemy -->
+    <div class="modal fade" id="certModal17" tabindex="-1" aria-labelledby="certModalLabel17" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="certModalLabel17">Cyber security: From beginning to end</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            <img src="Certificate/CS Udemy.jpg" class="img-fluid" alt="CV Udemy">
+            </div>
+        </div>
+        </div>
+    </div>
+    
     <!-- Modal 1: Udemy -->
     <div class="modal fade" id="certModal1" tabindex="-1" aria-labelledby="certModalLabel1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
