--- a/home.html
+++ b/home.html
@@ -1156,7 +1156,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-            <img src="Certificate/CS Udemy.jpg" class="img-fluid" alt="CV Udemy">
+            <img src="Certificate/cybersecurity udemy.jpg" class="img-fluid" alt="CV Udemy">
             </div>
         </div>
         </div>
