--- a/home.html
+++ b/home.html
@@ -320,6 +320,45 @@
             <h2 class="section-title">Projects</h2>
             <div class="row">
         
+                 <!-- Project 15: ConnectWise: A Next-Gen Social Media App -->
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">ConnectWise: A Next-Gen Social Media App</h5>
+                            <p class="fw-light mb-2">January 2025 - April 2025</p>
+                            <p class="mb-2"><u>George Washington University, Washington DC, US</u></p>
+                            <p> Engineered a scalable, modular platform enabling real-time posting, commenting, messaging, and notifications—leveraging microservices architecture and serverless functions for high availability and maintainability.</p>
+                            <p><strong>Technologies:</strong> Java, Spring Boot, Netlify Functions, PostgreSQL, AWS S3, JWT </p>
+                        </div>
+
+                        <div class="card-footer">
+                            <a href="https://github.com/vyas10102/Team_7_Final_Project" class="btn btn-primary" target="_blank">GitHub</a>
+                            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal15">
+                                More Details
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Modal for Project 15 -->
+                <div class="modal fade" id="modal15" tabindex="-1" aria-labelledby="modal15Label" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="modal15Label">ConnectWise: A Next-Gen Social Media App</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+
+                            <div class="modal-body">
+                                Designed and implemented a modular, scalable social platform using object-oriented principles; enabled secure content sharing, real-time messaging, and intuitive UX to connect college students and young professionals.
+                            </div>
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <!-- Project 1: Sign Language Detection -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
