--- a/home.html
+++ b/home.html
@@ -225,6 +225,7 @@
                             </p>
                             <p class="card-text">
                                 <em>Specialization: AI, Cybersecurity &amp; Web Development</em>
+                                <em>Received a SEAS Dean Award (50% scholarship).</em>
                             </p>
                         </div>
                     </div>
