--- a/home.html
+++ b/home.html
@@ -227,6 +227,9 @@
                                 <em>Specialization: AI, Cybersecurity &amp; Web Development</em>
                                 <em>Received a SEAS Dean Award (50% scholarship).</em>
                             </p>
+                            <p class="card-text">
+                                <small>Received a <b>SEAS Dean Award</b> (50% scholarship).</small>
+                            </p>
                         </div>
                     </div>
                 </div>
