--- a/home.html
+++ b/home.html
@@ -1495,7 +1495,7 @@
                     </div>
                     
                     <div class="mt-4">
-                        <a href="Aditi Vyas Resume.pdf" class="btn btn-outline-primary" target="_blank">View Resume</a>
+                        <a href="Aditi Vyas Resume New.pdf" class="btn btn-outline-primary" target="_blank">View Resume</a>
                     </div>
                 </div>
             </div>
