--- a/home.html
+++ b/home.html
@@ -1455,7 +1455,7 @@
                     <div class="card shadow-sm">
                         <div class="card-body">
                         <h5 class="card-title">
-                            International Journal of Scientific Research in Science, Engineering and Technologies
+                            Space Robotics - Guardians of the Galaxy, <em>International Journal of Scientific Research in Science, Engineering and Technologies</em>
                         </h5>
                         <p class="card-text">
                             <small>July 2020</small>
