--- a/home.html
+++ b/home.html
@@ -1455,8 +1455,11 @@
                     <div class="card shadow-sm">
                         <div class="card-body">
                         <h5 class="card-title">
-                            Space Robotics - Guardians of the Galaxy, <em>International Journal of Scientific Research in Science, Engineering and Technologies</em>
+                            Space Robotics - Guardians of the Galaxy, 
                         </h5>
+                            
+                            <em>International Journal of Scientific Research in Science, Engineering and Technologies</em>
+                        
                         <p class="card-text">
                             <small>July 2020</small>
                         </p>
