--- a/home.html
+++ b/home.html
@@ -227,7 +227,7 @@
                                 <em>Specialization: AI, Cybersecurity &amp; Web Development</em>
                             </p>
                             <p class="card-text">
-                                <small>Received a <b>SEAS Dean Award</b> (50% scholarship).</small>
+                                <small>Received a <b>SEAS Dean Award</b>.</small>
                             </p>
                         </div>
                     </div>
