--- a/home.html
+++ b/home.html
@@ -1001,6 +1001,24 @@
                 <div class="timeline-item mb-4">
                     <div class="card shadow-sm">
                         <div class="card-body">
+                            <h5 class="card-title">Software Engineer & AI Integration Specialist </h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Seek and Sight, St. Louis, MO (Remote)</h6>
+                            <p class="card-text">
+                                <small>July 2025 - Present</small>
+                            </p>
+                            <ul>
+                                <li>Developed front-end game features and integrated visual assets for an edtech platform supporting neurodiverse learners.</li>
+                                <li>Designed AI-driven modules for personalized learning and progress tracking while applying cybersecurity best practices.</li>
+                                <li>Collaborated with a remote cross-functional team on agile sprints, testing, and product refinement.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Additional timeline items can be added here -->
+                <div class="timeline-item mb-4">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
                             <h5 class="card-title">Software Engineer Intern</h5>
                             <h6 class="card-subtitle mb-2 text-muted">Rovae Incorporation, Bangalore, India</h6>
                             <p class="card-text">
@@ -1014,7 +1032,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- Additional timeline items can be added here -->
                 <!--
                 <div class="timeline-item mb-4">
                     <div class="card shadow-sm">
