--- a/home.html
+++ b/home.html
@@ -419,7 +419,46 @@
             <h2 class="section-title">Projects</h2>
             <div class="row">
         
-                 <!-- Project 15: ConnectWise: A Next-Gen Social Media App -->
+                <!-- Project 16: Invisibility Cloak using OpenCV -->
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Invisibility Cloak — OpenCV</h5>
+                            <p class="fw-light mb-2">August 2025 - September 2025</p>
+                            <p class="mb-2"><u>Personal Porject</u></p>
+                            <p> I created an interactive Invisibility Cloak application using Python, OpenCV, and NumPy.  The system takes a clean backdrop image, detects a user-defined cloak color using HSV thresholds, and substitutes those pixels with the background to simulate invisibility.  To increase accuracy, I combined morphological operations (open, close, blur, dilate), temporal mask smoothing, and auto-calibration of HSV ranges.  The project also contains a live HSV tuner and hotkey controls for background recapture, mask visualization, and color tweaks, making it adaptable to many contexts.</p>
+                            <p><strong>Technologies:</strong> Python, OpenCV, and numpy </p>
+                        </div>
+
+                        <div class="card-footer">
+                            <a href="https://github.com/vyas10102/Invisible_Cloak" class="btn btn-primary" target="_blank">GitHub</a>
+                            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#modal16">
+                                More Details
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- Modal for Project 16 -->
+                <div class="modal fade" id="modal16" tabindex="-1" aria-labelledby="modal16Label" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="modal15Label">Invisibility Cloak — OpenCV</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+
+                            <div class="modal-body">
+                                Designed and implemented a modular, scalable social platform using object-oriented principles; enabled secure content sharing, real-time messaging, and intuitive UX to connect college students and young professionals.
+                            </div>
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Project 15: ConnectWise: A Next-Gen Social Media App -->
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
@@ -1736,3 +1775,4 @@
     </script>
     </body>
     </html>
+
