--- a/home.html
+++ b/home.html
@@ -228,6 +228,7 @@
                             </p>
                             <p class="card-text">
                                 <small>Received a <b>SEAS Dean Award</b>.</small>
+                                <small><b>GPA: 3.37/4.0</b>.</small>
                             </p>
                         </div>
                     </div>
@@ -243,6 +244,7 @@
                             </h6>
                             <p class="card-text">
                                 <small>Bangalore, India | July 2019 – June 2023</small>
+                                <small><b>GPA: 8.98/10.0</b>.</small>
                             </p>
                         </div>
                     </div>
@@ -1649,7 +1651,7 @@
                     </div>
                     
                     <div class="mt-4">
-                        <a href="Aditi Vyas Resume New.pdf" class="btn btn-outline-primary" target="_blank">View Resume</a>
+                        <a href="Aditi Vyas Resume.pdf" class="btn btn-outline-primary" target="_blank">View Resume</a>
                     </div>
                 </div>
             </div>
@@ -1775,4 +1777,5 @@
     </script>
     </body>
     </html>
+
 
